refactor:replace public_id with domain-specific name
